navbar part added

--- a/index.html
+++ b/index.html
@@ -51,16 +51,18 @@
          <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
          </div>
 
+         <div class="grid grid-cols-2 gap-6">
+           <div class="flex gap-4 items-start bg-white ">
+            <img src="/assets/commercial.png" alt=""> 
+            </div>
+            <h4>Commercial</h4>
+            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+
+
          <div>
-
+          <img src="/assets/Rectangle.png" alt="">
          </div>
-
-
-
-
-
-
-
 
   </section>
   </main>
