--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
             <h4>Commercial</h4>
             <p>The barn house captivates with its blend of rustic charm and modern.</p>
         </div>
-
+    </div>
+    <h4>Commercial</h4>
+    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+</div>
 
          <div>
           <img src="/assets/Rectangle.png" alt="">
