--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Home</title>
 </head>
-<body class="container mx-auto px-6">
+<body class="mx-auto px-6">
   <navbar>
  <div class="flex gap-2 items-center justify-between">
     <div class="flex">
@@ -44,11 +44,11 @@
     </div>
   </banner>
   <main>
-  <section>
+  <section class="bg-[#F4F4F4] w-screen mx-auto">
         <div>
-         <button>About us</button>
-         <h1>We design thoughtful, liveable spaces</h1>
-         <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+         <button class="bg-gray-200 rounded-full px-4 py-2"><i class="fa-solid fa-arrow-right"></i>About us</button>
+         <h1 class="font-bold text-4xl">We design thoughtful,<br>liveable spaces</h1>
+         <p class="font-medium text-base">The barn house captivates with its blend of rustic charm and<br> modern sophistication, featuring weathered wood, sleek metal accents.</p>
          </div>
 
          <div class="grid grid-cols-2 gap-6">
